# imdb_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: classical_ml.ipynb  dl.ipynb
src/imdb_classification/: data.py  data_dl.py
