[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imdb_classification"
version = "0.1.0"
description = "IMDb Sentiment Classification project with classical ML and PyTorch"
authors = [
    { name = "Logan Foote", email = "lfoote@caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["NLP", "sentiment-analysis", "machine-learning"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/loganfoote/imdb_classification"

[tool.setuptools.packages.find]
where = ["src"]